--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
         <figure class="photo">
-            <img src="./img/basenji1.jpg" width="380" height="280">
+            <img src="./img/Basenji1.jpg" width="380" height="280">
             <figcaption class="tpic">Басенджі на відпочинку</figcaption>
         </figure>
 
